# MultiplayerGame

./: CMakeLists.txt  CMakeListsWSL.txt  CMakeListsWindows.txt
Client/: CMakeLists.txt  Client.cpp  Client.h  ServerData.cpp  ServerData.h  TestMap.txt  main.cpp
Client/Game/: EnemyInformation.cpp  EnemyInformation.h  GameInformation.cpp  GameInformation.h  main2.cpp  main2.h
Game/: BasicWall.h  Bullet.cpp  Bullet.h  EnemyInformation.cpp  EnemyInformation.h  GameInformation.cpp  GameInformation.h  MapData.h  MessageType.h  Spawnpoint.h
Server/: CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  MessageHandler.cpp  MessageHandler.h  Server.cpp  Server.h  main.cpp
UserInterface/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
cmake/: FindENet.cmake
